Fixing paddings
* adding documentFirstHeading class to documentation view header_update
* removing extra padding generated by bootstrap from the
listing-description wrapper
* removing extra padding from unordered list

--- a/scoreboard/theme/static/css/custom.css
+++ b/scoreboard/theme/static/css/custom.css
@@ -1558,10 +1558,6 @@ div.field span.required:after {
     color: #0073A8;
   }
 
-  .breadcrumbs {
-    padding-left: 0;
-  }
-
   .breadcrumbs li,
   .breadcrumbs li.first {
     display: block;
@@ -1871,7 +1867,7 @@ div.qtip-default div.qtip-titlebar {
 }
 
 .scoreboard-datacubes-listing {
-  padding-left:15px;
+  padding-left:0;
 }
 
 .dataset-description-area.column-main {
